Fix spacing for mobile version

--- a/components/body/specialty.module.css
+++ b/components/body/specialty.module.css
@@ -39,8 +39,12 @@
     display: flex;
 }
 
-.headerSpan {
+.icon {
     margin-left: 3rem;
+}
+
+.iconMobile {
+    display: none;
 }
 
 .description {
@@ -104,11 +108,19 @@
         padding-top: 5rem;
     }
 
-    .content {
-        grid-column: 1 / 3;
-        padding: 1.5rem 3rem;
+    .product {
+        grid-template-columns: repeat(2, 30%) 20% 20%;
+    }
 
-        display: flex;
+    .content {
+        grid-column: 1 / 4;
+        padding: 0rem 3rem;
+
+        display: grid;
+
+        grid-template-columns: 80% 20%;
+        grid-template-rows: repeat(2, 1fr);
+
         flex-direction: column;
         justify-content: center;
     }
@@ -116,7 +128,7 @@
     .contentHeader {
         display: grid;
 
-        font-size: var(--header-xs);
+        font-size: var(--header-small);
 
         display: flex;
         align-items: center;
@@ -125,13 +137,23 @@
     .description {
         font-weight: bold;
         font-size: 2rem;
+        grid-column: 1 / 2;
     }
 
-    .product {
-        grid-template-columns: repeat(2, 40%) 20%;
+    .icon {
+        display: none;
+    }
+
+    .iconMobile {
+        display: flex;
+        grid-row: 1 / 3;
+        grid-column: 2 / 3;
+        align-items: center;
+        justify-items: center;
     }
 
     .btn {
         padding: 2rem;
+        grid-column: 4 / 5;
     }
 }
