--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -37,7 +37,6 @@
     display: flex;
     justify-content: center;
     height: 100%;
-    width: 3rem;
 }
 
 .tabs {
